welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:6: error: value Blue is not a member of object java.awt.Color
      faireV(Color.Blue)
                   ^